List Comprehension:Assignment complete

--- a/Assignments/list_Assignment.ipynb
+++ b/Assignments/list_Assignment.ipynb
@@ -383,8 +383,184 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "id": "6a679f34",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Assignment 10: Flattening a Nested List\n",
+    "\n",
+    "# Write a function that takes a nested list and flattens it into a single list. Print the original and flattened lists.\n",
+    "\n",
+    "flattened_list=[val for sublist in matrix for val in sublist]\n",
+    "print(flattened_list)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "16c38a9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 4, 5, 7, 99, 8, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Assignment 11: List Manipulation\n",
+    "\n",
+    "# Create a list of the first 10 positive integers. Remove the elements at indices 2, 4, and 6, and insert the element '99' at index 5. Print the modified list.\n",
+    "\n",
+    "pst_int=[num for num in range(11) if num>0]\n",
+    "\n",
+    "## Removing Elements at indices 2 ,4,6\n",
+    "pst_int.pop(2)\n",
+    "pst_int.pop(4)\n",
+    "pst_int.pop(6)\n",
+    "\n",
+    "## Inserting the element 99 at index 5\n",
+    "pst_int.insert(5,99)\n",
+    "\n",
+    "\n",
+    "print(pst_int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "25a75477",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 'a'), (2, 'b'), (3, 'c'), (4, 'd'), (5, 'e')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Assignment 12: List Zipping\n",
+    "\n",
+    "#Create two lists of the same length. Use the `zip` function to combine these lists into a list of tuples and print the result.\n",
+    "\n",
+    "list1 = [1, 2, 3, 4, 5]\n",
+    "list2 = ['a', 'b', 'c', 'd', 'e']\n",
+    "zipped = list(zip(list1, list2))\n",
+    "print(zipped)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "9e7f5c73",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original List : [0, 2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 22, 24]\n",
+      "Reversed List : [24, 22, 20, 18, 16, 14, 12, 10, 8, 6, 4, 2, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Assignment 13: List Reversal\n",
+    "\n",
+    "#Write a function that takes a list and returns a new list with the elements in reverse order. Print the original and reversed lists.\n",
+    "\n",
+    "def rever(List):\n",
+    "    temp =List[::-1]\n",
+    "    return temp\n",
+    "\n",
+    "lst1=[num for num in range(25) if num %2==0 ]\n",
+    "print(f\"Original List : {lst1}\")\n",
+    "new_lst=rever(lst1)\n",
+    "print(f\"Reversed List : {new_lst}\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "179304b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original List : [0, 2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 22, 24]\n",
+      "Rotated List : [14, 16, 18, 20, 22, 24, 0, 2, 4, 6, 8, 10, 12]\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Assignment 14: List Rotation\n",
+    "\n",
+    "#Write a function that rotates a list by n positions. Print the original and rotated lists.\n",
+    "\n",
+    "def rotate_list(list,n):\n",
+    "    return list[n:] + list[:n]\n",
+    "\n",
+    "lst1=[num for num in range(25) if num %2==0 ]\n",
+    "print(f\"Original List : {lst1}\")\n",
+    "\n",
+    "n=7 # let n be 7\n",
+    "\n",
+    "rotated=rotate_list(lst1,n)\n",
+    "print(f\"Rotated List : {rotated}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "1d344e22",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Intersected list [3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Assignment 15: List Intersection\n",
+    "\n",
+    "#Write a function that takes two lists and returns a new list containing only the elements that are present in both lists. Print the intersected list.\n",
+    "\n",
+    "def intersected_list(list1,list2):\n",
+    "    return [num for num in list1 if num in list2]\n",
+    "\n",
+    "list1 = [1, 2, 3, 4, 5]\n",
+    "list2 = [3, 4, 5, 6, 7]\n",
+    "\n",
+    "new_list=intersected_list(list1,list2)\n",
+    "print(\"Intersected list\",new_list)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c70283f5",
    "metadata": {},
    "outputs": [],
    "source": []
