--- a/Assignments/assignment_Function.ipynb
+++ b/Assignments/assignment_Function.ipynb
@@ -14,10 +14,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "324"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def square(num):\n",
+    "    return num*num\n",
+    "\n",
+    "square(2)\n",
+    "square(9)\n",
+    "square(18)"
+   ]
   },
   {
    "attachments": {},
@@ -31,10 +49,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def sum(num1,num2):\n",
+    "    return num1+num2\n",
+    "\n",
+    "sum(1,2)"
+   ]
   },
   {
    "attachments": {},
@@ -48,10 +82,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def defaultsum(num1,num2=5):\n",
+    "    return(num1+num2)\n",
+    "\n",
+    "defaultsum(4)"
+   ]
   },
   {
    "attachments": {},
@@ -65,10 +115,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " First Name:Himanshu\n",
+      " Last Name:Mishra \n",
+      " Age:27\n"
+     ]
+    }
+   ],
+   "source": [
+    "def named_arguments(first_name,last_name,age):\n",
+    "    return f\" First Name:{first_name}\\n Last Name:{last_name} \\n Age:{age}\"\n",
+    "\n",
+    "print(named_arguments(\"Himanshu\",\"Mishra\",27))"
+   ]
   },
   {
    "attachments": {},
@@ -82,10 +147,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "720"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def variable_arguments_product(*args):\n",
+    "    product=1\n",
+    "    for num in args:\n",
+    "        product*=num\n",
+    "    return product\n",
+    "\n",
+    "variable_arguments_product(1,2,3,4,5,6,)"
+   ]
   },
   {
    "attachments": {},
@@ -99,10 +183,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3192\n"
+     ]
+    }
+   ],
+   "source": [
+    "def nested_function(num1,num2):\n",
+    "    def multiply(x,y):\n",
+    "        return x*y\n",
+    "    return multiply(num1,num2)\n",
+    "\n",
+    "print(nested_function(56,57))"
+   ]
   },
   {
    "attachments": {},
@@ -116,10 +215,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Square:16\n",
+      "Cube:64\n",
+      "Quadraple:256\n"
+     ]
+    }
+   ],
+   "source": [
+    "def return_multiple_values(num):\n",
+    "    return num**2,num**3,num**4\n",
+    "\n",
+    "x,y,z=return_multiple_values(4)\n",
+    "print(f\"Square:{x}\\nCube:{y}\\nQuadraple:{z}\")"
+   ]
   },
   {
    "attachments": {},
@@ -133,10 +248,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120\n"
+     ]
+    }
+   ],
+   "source": [
+    "def factorial(num):\n",
+    "    if num == 0:\n",
+    "        return 1\n",
+    "    return num*factorial(num-1)\n",
+    "\n",
+    "print(factorial(5))"
+   ]
   },
   {
    "attachments": {},
@@ -150,10 +280,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "157\n"
+     ]
+    }
+   ],
+   "source": [
+    "sum = lambda x,y: x+y \n",
+    "print(sum(78,79))"
+   ]
   },
   {
    "attachments": {},
@@ -167,10 +308,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]\n",
+      "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100, 121, 144, 169, 196, 225, 256, 289, 324, 361]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_of_integer=[x for x in range(1,20)]\n",
+    "print(list_of_integer)\n",
+    "list_of_squares=list(map(lambda x:x**2,list_of_integer))\n",
+    "print(list_of_squares)\n"
+   ]
   },
   {
    "attachments": {},
@@ -184,10 +339,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]\n",
+      "[1, 3, 5, 7, 9, 11, 13, 15, 17, 19]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(list_of_integer)\n",
+    "\n",
+    "odd_numbers=list(filter(lambda x:x%2!=0,list_of_integer ))\n",
+    "\n",
+    "print(odd_numbers)"
+   ]
   },
   {
    "attachments": {},
@@ -201,10 +371,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Executing Function\n",
+      "Function Executed\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "190"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def decorator_function(func):\n",
+    "    def wrapper(*args):\n",
+    "        print(\"Executing Function\")\n",
+    "        val = func(*args)\n",
+    "        print(\"Function Executed\")\n",
+    "        return val\n",
+    "    return wrapper\n",
+    "\n",
+    "\n",
+    "@decorator_function\n",
+    "def list_sum(lst):\n",
+    "    sum=0\n",
+    "    for x in lst:\n",
+    "        sum+=x\n",
+    "    return sum\n",
+    "\n",
+    "list_sum([x for x in range(1,20)])"
+   ]
   },
   {
    "attachments": {},
@@ -218,10 +425,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Varaible length Arguments: \n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+      "{1: 1, 2: 8, 3: 27, 4: 64, 5: 125, 6: 216, 7: 343, 8: 512, 9: 729, 10: 1000}\n",
+      "Keywords Arguments\n",
+      " \n"
+     ]
+    }
+   ],
+   "source": [
+    "def variable_length(*args,**kwargs):\n",
+    "    print(\"Varaible length Arguments: \")\n",
+    "    for arg in args:\n",
+    "        print(arg)\n",
+    "    \n",
+    "    print(\"Keywords Arguments\\n \")\n",
+    "\n",
+    "    for key,value in kwargs:\n",
+    "        print(f\"key:{key} value:{value}\")\n",
+    "\n",
+    "test_dict={x:x**3 for x in range(1,11)}\n",
+    "lst=[x for x in range(1,11)]\n",
+    "\n",
+    "variable_length(lst,test_dict)"
+   ]
   },
   {
    "attachments": {},
@@ -235,10 +469,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25]\n",
+      "[2, 3, 4, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def higher_order_function(func,lst):\n",
+    "    return [func(x) for x in lst ]\n",
+    "\n",
+    "print(higher_order_function(lambda x: x ** 2, [1, 2, 3, 4, 5]))  # [1, 4, 9, 16, 25]\n",
+    "print(higher_order_function(lambda x: x + 1, [1, 2, 3, 4, 5]))  # [2, 3, 4, 5, 6]"
+   ]
   },
   {
    "attachments": {},
@@ -249,6 +498,53 @@
     "\n",
     "Define a function with a docstring that explains what the function does, its parameters, and its return value. Print the function's docstring."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "    This function takes two integers and returns their sum.\n",
+      "\n",
+      "    Parameters:\n",
+      "    x (int): The first integer.\n",
+      "    y (int): The second integer.\n",
+      "\n",
+      "    Returns:\n",
+      "    int: The sum of the two integers.\n",
+      "    \n"
+     ]
+    }
+   ],
+   "source": [
+    "def example_function(x, y):\n",
+    "    \"\"\"\n",
+    "    This function takes two integers and returns their sum.\n",
+    "\n",
+    "    Parameters:\n",
+    "    x (int): The first integer.\n",
+    "    y (int): The second integer.\n",
+    "\n",
+    "    Returns:\n",
+    "    int: The sum of the two integers.\n",
+    "    \"\"\"\n",
+    "    return x + y\n",
+    "\n",
+    "# Print docstring\n",
+    "print(example_function.__doc__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -258,7 +554,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.0"
   },
   "orig_nbformat": 4
